--- a/style.css
+++ b/style.css
@@ -945,7 +945,16 @@ a.blog-more {
     z-index: 111;
     background-color: #338da8;
 }
-.even a i {} .even a img {} .latest-blog-info {
+.even a i {}
+.even a img {}
+
+.blog-list {
+  list-style: disc;
+  padding-left: 20px;
+  padding-top: 10px;
+}
+
+.latest-blog-info {
     bottom: 20px;
     box-sizing: border-box;
     padding: 20px 50px;
@@ -1033,6 +1042,13 @@ a.blog-more {
 h3.latest-blog-title {
     color: #fff;
     font-size: 34px;
+    line-height: normal;
+    text-transform: uppercase;
+    font-weight: 400;
+}
+h4.latest-blog-title {
+    color: #fff;
+    font-size: 26px;
     line-height: normal;
     text-transform: uppercase;
     font-weight: 400;
@@ -4017,6 +4033,13 @@ h3.team-3-skill {
     padding-bottom: 85px;
     padding-top: 100px;
 }
+
+.pricing-area .section-heading h3 {
+  margin-bottom: 50px;
+  font-size: 45px;
+  line-height: 45px;
+}
+
 .pricing-details {
     margin-left: -15px;
 }
