--- a/css/style.css
+++ b/css/style.css
@@ -4011,7 +4011,7 @@ h1.about-intensy-title {
 }
 
 .newsletter-area {
-  background: rgba(0, 0, 0, 0) url("img/about/about_us_h1.jpg") no-repeat scroll center center / cover;
+  background: rgba(0, 0, 0, 0) url("../img/about/about_us_h1.jpg") no-repeat scroll center center / cover;
   overflow: hidden;
   padding: 150px 0 133px;
   text-align: center;
