--- a/css/responsive.css
+++ b/css/responsive.css
@@ -7,6 +7,12 @@
   .latest-blog-area > div:hover .latest-blog-info p {
     font-size: 1rem;
   }
+  .hidden-text {
+    display: inline;
+  }
+  .latest-blog-info p {
+    font-size: 1rem;
+  }
 }
  
 /* Normal desktop :992px. */
