--- a/css/style.css
+++ b/css/style.css
@@ -853,12 +853,16 @@ span.search-button i {
 .awesome-info {
   background-color: #338da8;
   height: 100%;
-  padding: 60px;
+
   position: absolute;
   top: 0;
   width: 100%;
   opacity: 1;
   display: block;
+}
+
+.features-area .awesome-info {
+  padding: 30px;
 }
 
 .awesome-info h3 {
@@ -2227,6 +2231,7 @@ a.cbp-caption:hover .blog-post-photo {
   width: 100%;
   z-index: 1;
   top: 0;
+  padding: 60px;
 }
 
 .view-post span {
@@ -2255,8 +2260,6 @@ a.cbp-caption:hover .blog-post-photo {
   color: #787878;
 }
 
-.post-meta-b {
-}
 
 .post-meta-b span.grid-blog-date {
   margin-right: 5px;
