--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,17 @@ button.readon {
   display: block;
 }
 
+.awesome-portfolio .readon {
+  border: 2px solid #fff;
+  margin-top: 15px;
+  color: #fff;
+}
+
+.awesome-portfolio .readon:hover {
+  background: #fff;
+  color: #338da8;
+}
+
 body .readon.white:hover {
   border-color: #338da8;
   color: #fff;
@@ -859,7 +870,6 @@ span.search-button i {
 .awesome-info {
   background-color: #338da8;
   height: 100%;
-
   position: absolute;
   top: 0;
   width: 100%;
@@ -2237,7 +2247,8 @@ a.cbp-caption:hover .blog-post-photo {
   width: 100%;
   z-index: 1;
   top: 0;
-  padding: 60px;
+  text-align: center;
+  padding-top: 30px;
 }
 
 .view-post span {
@@ -4152,8 +4163,24 @@ h2.heading-inner:before {
 }
 
 .landing__form {
-  margin: 30px 0;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0,0,0,0.8)), url('../img/features/bg-2.jpg') no-repeat center;
+  padding: 30px 0;
+  background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), url('../img/features/bg-2.jpg') no-repeat center;
+}
+
+.landing__form .contact-content {
+  border: 1px solid #a2a2a2;
+}
+
+.landing__form .control-level input {
+  border: 1px solid #a2a2a2;
+}
+
+.landing__form .contact-form-ac > p {
+  color: #2d2d2d;
+}
+
+.landing__form .textarea-contact .textfield {
+  border: 1px solid #a2a2a2;
 }
 
 .landing__form .contact-name {
