--- a/css/style.css
+++ b/css/style.css
@@ -854,7 +854,7 @@ span.search-button i {
   overflow: hidden
 }
 
-.single-awesome-portfolio a {
+.single-awesome-portfolio .portfolio-hover {
   position: relative;
   display: block;
 }
@@ -892,7 +892,7 @@ span.search-button i {
   font-size: 12px;
 }
 
-.single-awesome-portfolio a:hover .awesome-img {
+.single-awesome-portfolio .portfolio-hover:hover .awesome-img {
   transform: translateY(100%);
 }
 
@@ -916,11 +916,11 @@ span.search-button i {
   margin: 10px 0;
 }
 
-.portfolio-column-5-area .single-awesome-portfolio a:hover .awesome-info {
+.portfolio-column-5-area .single-awesome-portfolio .portfolio-hover:hover .awesome-info {
   transform: translateY(100%);
 }
 
-.portfolio-column-5-area .single-awesome-portfolio a:hover .awesome-img {
+.portfolio-column-5-area .single-awesome-portfolio .portfolio-hover:hover .awesome-img {
   transform: translateY(0%);
 }
 
@@ -2217,7 +2217,7 @@ h2.heading-2::before {
 }
 
 a.cbp-caption,
-.single-awesome-portfolio a {
+.single-awesome-portfolio .portfolio-hover {
   overflow: hidden;
   position: relative;
   z-index: 1;
@@ -4185,6 +4185,16 @@ h2.heading-inner:before {
 
 .landing__form .contact-name {
   text-align: center;
+}
+
+.zindex-fix__lower {
+  position: relative;
+  z-index: 0;
+}
+
+.zindex-fix__upper {
+  position: relative;
+  z-index: 5;
 }
 
 h2.contact-name {
@@ -8043,7 +8053,7 @@ a.blog-column-title {
   width: 16.664%;
 }
 
-.portfolio-column-6-area .single-awesome-portfolio a:hover .awesome-img {
+.portfolio-column-6-area .single-awesome-portfolio .portfolio-hover:hover .awesome-img {
   transform: translateY(-100%);
 }
 
